# clion-sandbox

./: CMakeLists.txt  main.cpp
src/: main.cpp  main.hpp
src/Hoge/: CmakeLists.txt  Hoge.cpp  Hoge.hpp
